Added alt text to images.

--- a/feed/index.html
+++ b/feed/index.html
@@ -163,6 +163,7 @@
                   <img
                     src="../images/seth-kane-XOEAHbE_vO8-unsplash.jpg"
                     class="img-thumbnail"
+                    alt="Red cabin in front of a mountains and sea scenery."
                   />
                   <small
                     class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
@@ -209,6 +210,7 @@
                   <img
                     src="../images/sebastien-goldberg-1r6rwX1FUdc-unsplash.jpg"
                     class="img-thumbnail"
+                    alt="Raindeer in a beautiful nature scenery."
                   />
                   <small
                     class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
@@ -255,6 +257,7 @@
                   <img
                     src="../images/toomas-tartes-Yizrl9N_eDA-unsplash.jpg"
                     class="img-thumbnail"
+                    alt="Two hikers walking on a mountain trail."
                   />
                   <small
                     class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
@@ -301,6 +304,7 @@
                   <img
                     src="../images/lightscape-ist1RQOfkcE-unsplash.jpg"
                     class="img-thumbnail"
+                    alt="The northern light over the sea and a snowy montain."
                   />
                   <small
                     class="row my-3 d-flex justify-content-center .justify-content-sm-start .justify-content-md-end secondary-font"
@@ -353,6 +357,7 @@
                   <img
                     src="../images/karoline-vargdal-vKjkBosYsN0-unsplash.jpg"
                     class="img-thumbnail"
+                    alt="A river with lots of water flowing through a bridge."
                   />
                   <small
                     class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
