--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img
               src="./images/collage-hiking-images-with-border.jpeg"
               class="figure-img img-fluid rounded"
-              alt="A generic square placeholder image with rounded corners in a figure."
+              alt="A collage of nature images."
             />
             <figcaption
               class="figcaption-font image-text h4 text-center pt-sm-1 m-1 mx-lg-3 lh-base"
