--- a/profile/index.html
+++ b/profile/index.html
@@ -82,6 +82,7 @@
             <img
               class="img-thumbnail p-1 rounded-circle rounded-5 rounded-top-0 border-primary border-0"
               src="../images/Profile-image-hikes-inspire.jpg"
+              alt="Profile image of user"
             />
             <a class="btn btn-warning rounded-pill my-3 secondary-font"
               >Follow <i class="fa-solid fa-plus"></i
@@ -117,6 +118,7 @@
                 <img
                   src="../images/john-o-nolan-6f_ANCcbj3o-unsplash.jpg"
                   class="img-thumbnail"
+                  alt="Lofoten from the air, red houses, blue sea and mountains."
                 />
               </div>
             </div>
@@ -128,6 +130,7 @@
                 <img
                   src="../images/benjamin-davies-CiYenwxBB3U-unsplash.jpg"
                   class="img-thumbnail"
+                  alt="Mountain hike in fog and wet, green terrain."
                 />
               </div>
             </div>
@@ -141,6 +144,7 @@
                 <img
                   src="../images/sami-matias-B8mHassV6Q0-unsplash.jpg"
                   class="img-thumbnail"
+                  alt="Red house in front of the sea. Mountains in the background."
                 />
               </div>
             </div>
@@ -152,6 +156,8 @@
                 <img
                   src="../images/tobias-tullius-eJeEz6Paz-o-unsplash.jpg"
                   class="img-thumbnail"
+                  alt="
+                  Bridge over river and red house by a waterfall."
                 />
               </div>
             </div>
@@ -166,6 +172,8 @@
                 <img
                   src="../images/northern-norway-7605060_1280.jpg"
                   class="img-thumbnail"
+                  alt="
+                  Person walking on a green mountain with sea view."
                 />
               </div>
             </div>
@@ -177,6 +185,7 @@
                 <img
                   src="../images/vidar-nordli-mathisen-2cNh00feVzw-unsplash.jpg"
                   class="img-thumbnail"
+                  alt="Yellow house on a plain. Darker clouds and mountains in the background."
                 />
               </div>
             </div>
@@ -188,6 +197,7 @@
                 <img
                   src="../images/gautam-arora-Ta0pzGO6N8U-unsplash.jpg"
                   class="img-thumbnail"
+                  alt="Trolltunga view. Fjord and mountains."
                 />
               </div>
             </div>
@@ -199,6 +209,7 @@
                 <img
                   src="../images/hery-707600_1280.jpg"
                   class="img-thumbnail"
+                  alt="Sunset over mountains. Golden light."
                 />
               </div>
             </div>
