--- a/index.html
+++ b/index.html
@@ -90,54 +90,198 @@
           </figure>
         </div>
 
-        <div
-          class="container bg-light col-11 col-sm-5 col-md-4 col-lg-4 m-3 m-sm-0 pt-5 pb-md-5 text-center d-flex justify-content-center"
-        >
-          <form action="/profile/" class="pb-lg-5 pt-lg-5">
+        <section id="contact-and-registration-forms">
+          <div class="container-lg my-5">
+            <nav>
+              <div
+                class="nav nav-tabs"
+                id="nav-login-registration-tab"
+                role="tablist"
+              >
+                <button
+                  class="nav-link active text-secondary"
+                  id="nav-login-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#nav-login"
+                  type="button"
+                  role="tab"
+                  aria-controls="nav-login"
+                  aria-selected="true"
+                >
+                  Log in
+                </button>
+
+                <button
+                  class="nav-link text-light"
+                  id="nav-registration-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#nav-registration"
+                  type="button"
+                  role="tab"
+                  aria-controls="nav-registration"
+                  aria-selected="true"
+                >
+                  Register
+                </button>
+              </div>
+            </nav>
+          </div>
+
+          <div class="tab-content" id="content-login-registration">
             <div
-              class="form-group row my-3 d-flex justify-content-center align-center"
+              class="tab-pane fade show active p-3"
+              id="nav-login"
+              role="tab-panel"
+              aria-labelledby="nav-login-tab"
             >
-              <label for="inputEmail" class="col-form-label"></label>
-              <div class="col-10 col-sm-11">
-                <input
-                  type="email"
-                  required
-                  class="form-control bg-light"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title="A valid e-mail adress must contain a @."
-                  id="inputEmail"
-                  placeholder="Email"
-                />
+              <div class="row justify-content-center-my-5">
+                <div
+                  class="container bg-light col-lg-6 pt-5 pb-md-5 text-center d-flex justify-content-center"
+                >
+                  <form
+                    action="/profile/"
+                    class="pb-lg-5 pt-lg-5 text-start secondary-font"
+                  >
+                    <h2 class="text-center my-5 primary-font">Log in</h2>
+                    <div
+                      class="form-group row my-3 d-flex justify-content-center align-center"
+                    >
+                      <div class="col-10 col-sm-11">
+                        <label for="inputEmail" class="col-form-label"
+                          >Email</label
+                        >
+                        <input
+                          type="email"
+                          required
+                          class="form-control bg-light mb-3"
+                          data-toggle="tooltip"
+                          data-placement="top"
+                          title="A valid e-mail adress must contain a @."
+                          id="inputEmail"
+                        />
+                        <label for="Password" class="col-form-label"
+                          >Password</label
+                        >
+
+                        <input
+                          type="password"
+                          minlength="8"
+                          required
+                          class="form-control bg-light"
+                          data-toggle="tooltip"
+                          data-placement="top"
+                          title=" Your password must be at least 8 characters long."
+                          id="Password"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="form-group row">
+                      <div class="p-5 d-flex justify-content-center">
+                        <input
+                          type="submit"
+                          value="Log In"
+                          class="btn btn-warning col-10 col-sm-11"
+                        />
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
-            <div class="form-group row my-3 d-flex justify-content-center">
-              <label for="Password" class="col-form-label"></label>
-              <div class="col-10 col-sm-11">
-                <input
-                  type="password"
-                  minlength="8"
-                  required
-                  class="form-control bg-light"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title=" Your password must be at least 8 characters long."
-                  id="Password"
-                  placeholder="Password"
-                />
+            <div
+              class="tab-pane fade p-3"
+              id="nav-registration"
+              role="tab-panel"
+              aria-labelledby="nav-registration-tab"
+            >
+              <div class="row justify-content-center-my-5">
+                <div
+                  class="container bg-light col-lg-6 pt-5 pb-md-5 text-center d-flex justify-content-center"
+                >
+                  <form
+                    action="/profile/"
+                    class="pb-lg-5 pt-lg-5 text-start secondary-font"
+                  >
+                    <h2 class="text-center mt-4 primary-font">Register</h2>
+                    <p class="primary-font mb-5 text-secondary">
+                      and join the community
+                    </p>
+                    <div
+                      class="form-group row my-3 d-flex justify-content-center align-center"
+                    >
+                      <div class="col-10 col-sm-11">
+                        <label for="firstname" class="col-form-label"
+                          >Firstname</label
+                        >
+                        <input
+                          type="text"
+                          required
+                          minlength="2"
+                          class="form-control bg-light mb-2"
+                          data-toggle="tooltip"
+                          data-placement="top"
+                          title="Please enter your first name"
+                          id="input-first-name"
+                        />
+                        <label for="lastname" class="col-form-label"
+                          >Lastname</label
+                        >
+                        <input
+                          type="text"
+                          required
+                          minlength="2"
+                          class="form-control bg-light mb-2"
+                          data-toggle="tooltip"
+                          data-placement="top"
+                          title="Please enter your lastname"
+                          id="input-last-name"
+                        />
+
+                        <label for="inputEmail" class="col-form-label"
+                          >Email</label
+                        >
+                        <input
+                          type="email"
+                          required
+                          class="form-control bg-light mb-2"
+                          data-toggle="tooltip"
+                          data-placement="top"
+                          title="A valid e-mail adress must contain a @."
+                          id="inputEmail"
+                        />
+
+                        <label for="Password" class="col-form-label"
+                          >Your Password</label
+                        >
+                        <input
+                          type="password"
+                          minlength="8"
+                          required
+                          class="form-control bg-light"
+                          data-toggle="tooltip"
+                          data-placement="top"
+                          title="Your chosen password must be at least 8 characters long."
+                          id="Password"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="form-group row">
+                      <div class="p-5 d-flex justify-content-center">
+                        <input
+                          type="submit"
+                          value="Log In"
+                          class="btn btn-warning col-10 col-sm-11"
+                        />
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
-            <div class="form-group row">
-              <div class="p-5">
-                <input
-                  type="submit"
-                  value="Log In"
-                  class="btn btn-warning col-10 col-sm-11"
-                />
-              </div>
-            </div>
-          </form>
-        </div>
+          </div>
+        </section>
       </div>
     </main>
     <footer class="bg-secondary pt-5 pb-3">
