--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/css/theme.css" />
-    <script defer type="module" src="../js/index.mjs"></script>
+    <script defer type="module" src="./js/index.mjs"></script>
    
   </head>
   <body>
