--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 Search inspiration and post your favourite hikes!
                 </figcaption>
             </figure>
-            <form id="log-in" name="auth" action="/auth/register" method="post" class="bg-light text-start secondary-font col-10 col-sm-5 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2">
+            <form id="log-in" name="auth" method="post" class="bg-light text-start secondary-font col-10 col-sm-5 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2">
                 <h2 class="text-center my-2 pt-5 primary-font">Log in</h2>
                 <div class="form-group row my-3 " >
                     <div class="d-flex justify-content-center align-center">
@@ -140,7 +140,7 @@
                             type="button"
                             value="" 
                             class="btn btn-outline-warning mt-4 py-2 px-4"
-                            id="login-button">New user
+                            id="register-button">New user
                         </button></a>
                       
                       </div>
