display post function, data fetch by tag.

--- a/feed/index.html
+++ b/feed/index.html
@@ -23,6 +23,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../css/theme.css" />
+    <script defer type="module" src="../js/index.mjs"></script>
   </head>
   <body>
     <header class="bg-secondary container-fluid" id="header-feed-page">
@@ -459,6 +460,7 @@
           </div>
         </div>
       </div>
+      <section id="posts-feed-container" class="container"></section>
     </main>
     <footer class="bg-secondary pt-5 pb-3">
       <div class="social d-flex col justify-content-center mb-5">
