--- a/feed/index.html
+++ b/feed/index.html
@@ -104,12 +104,10 @@
             </button>
           </div>
         </nav>
-        <div class="tab-content text-light" id="nav-tab-content">
-          <section class="row">
-            <div class="col"></div>
-            <div class="col"></div>
-          </section>
 
+        <!--  -------------------------------------------------------------------------------------------------------------------------- -->
+
+        <div class="tab-content text-light" id="nav-tab-content">
           <div
             class="tab-pane fade show active p-3"
             id="nav-feed"
@@ -157,250 +155,19 @@
                 </li>
               </ul>
             </div>
+
             <h1 class="primary-font h2 my-5">Find your next hike</h1>
-            <div class="container my-5">
-              <div class="row border rounded">
-                <div class="col-sm-4 my-2">
-                  <img
-                    src="../images/seth-kane-XOEAHbE_vO8-unsplash.jpg"
-                    class="img-thumbnail"
-                    alt="Red cabin in front of a mountains and sea scenery."
-                  />
-                  <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
-                    ><a
-                      href="#"
-                      class="col-2 col-sm-12 col-md-3 text-light me-1"
-                      >#North</a
-                    ><a href="#" class="col-2 col-sm-12 col-md-3 text-light"
-                      >#Summer</a
-                    ></small
-                  >
-                </div>
-                <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="secondary-font">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio voluptates quam ipsam aut ratione, adipisci, tenetur
-                    eveniet repellendus quae, qui asperiores ab atque itaque.
-                    Temporibus consequatur excepturi quis dignissimos
-                    doloremque.
-                  </p>
-                </div>
-                <div
-                  class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
-                >
-                  <small class="row mb-4 p-sm-0 secondary-font"
-                    >Written by:
-                    <div class="col-6">
-                      <a href="#" class="col text-light">Link to user</a>
-                    </div>
-                    <div class="col-2">
-                      <a href="#"
-                        ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow <i class="fa-solid fa-plus"></i></span
-                      ></a></div
-                  ></small>
-                </div>
-              </div>
-            </div>
 
-            <div class="container my-5">
-              <div class="row border rounded">
-                <div class="col-sm-4 my-2">
-                  <img
-                    src="../images/sebastien-goldberg-1r6rwX1FUdc-unsplash.jpg"
-                    class="img-thumbnail"
-                    alt="Raindeer in a beautiful nature scenery."
-                  />
-                  <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
-                    ><a
-                      href="#"
-                      class="col-2 col-sm-12 col-md-3 text-light me-2"
-                      >#Wildlife</a
-                    ><a href="#" class="col-2 col-sm-12 col-md-3 text-light"
-                      >#NationalPark</a
-                    ></small
-                  >
-                </div>
-                <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="secondary-font">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio voluptates quam ipsam aut ratione, adipisci, tenetur
-                    eveniet repellendus quae, qui asperiores ab atque itaque.
-                    Temporibus consequatur excepturi quis dignissimos
-                    doloremque.
-                  </p>
-                </div>
-                <div
-                  class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
-                >
-                  <small class="row mb-4 p-sm-0 secondary-font"
-                    >Written by:
-                    <div class="col-6">
-                      <a href="#" class="col text-light">Link to user</a>
-                    </div>
-                    <div class="col-2">
-                      <a href="#"
-                        ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow <i class="fa-solid fa-plus"></i></span
-                      ></a></div
-                  ></small>
-                </div>
-              </div>
-            </div>
+            <!--  -------------------------------------------------------------------------------------------------------------------------- -->
 
-            <div class="container my-5">
-              <div class="row border rounded">
-                <div class="col-sm-4 my-2">
-                  <img
-                    src="../images/toomas-tartes-Yizrl9N_eDA-unsplash.jpg"
-                    class="img-thumbnail"
-                    alt="Two hikers walking on a mountain trail."
-                  />
-                  <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
-                    ><a
-                      href="#"
-                      class="col-4 col-sm-12 col-md-5 text-light me-3"
-                      >#MountainHike</a
-                    ><a href="#" class="col-4 col-sm-12 col-md-5 text-light"
-                      >#Summer</a
-                    ></small
-                  >
-                </div>
-                <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="secondary-font">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio voluptates quam ipsam aut ratione, adipisci, tenetur
-                    eveniet repellendus quae, qui asperiores ab atque itaque.
-                    Temporibus consequatur excepturi quis dignissimos
-                    doloremque.
-                  </p>
-                </div>
-                <div
-                  class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
-                >
-                  <small class="row mb-4 p-sm-0 secondary-font"
-                    >Written by:
-                    <div class="col-6">
-                      <a href="#" class="col text-light">Link to user</a>
-                    </div>
-                    <div class="col-2">
-                      <a href="#"
-                        ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow <i class="fa-solid fa-plus"></i></span
-                      ></a></div
-                  ></small>
-                </div>
-              </div>
-            </div>
+            <!--  -------------------------------------------------------------------------------------------------------------------------- -->
 
-            <div class="container my-5">
-              <div class="row border rounded">
-                <div class="col-sm-4 my-2">
-                  <img
-                    src="../images/lightscape-ist1RQOfkcE-unsplash.jpg"
-                    class="img-thumbnail"
-                    alt="The northern light over the sea and a snowy montain."
-                  />
-                  <small
-                    class="row my-3 d-flex justify-content-center .justify-content-sm-start .justify-content-md-end secondary-font"
-                    ><a
-                      href="#"
-                      class="col-3 col-sm-12 col-md-4 text-light me-2"
-                      >#NorthLight</a
-                    ><a
-                      href="#"
-                      class="col-3 col-sm-12 col-md-3 me-2 mx-lg-1 text-light"
-                      >#Winter</a
-                    ><a
-                      href="#"
-                      class="col-3 col-sm-12 col-md-3 text-light mx-lg-1"
-                      >#Experience</a
-                    ></small
-                  >
-                </div>
-                <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="secondary-font">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio voluptates quam ipsam aut ratione, adipisci, tenetur
-                    eveniet repellendus quae, qui asperiores ab atque itaque.
-                    Temporibus consequatur excepturi quis dignissimos
-                    doloremque.
-                  </p>
-                </div>
-                <div
-                  class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
-                >
-                  <small class="row mb-4 p-sm-0 secondary-font"
-                    >Written by:
-                    <div class="col-6">
-                      <a href="#" class="col text-light">Link to user</a>
-                    </div>
-                    <div class="col-2">
-                      <a href="#"
-                        ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow <i class="fa-solid fa-plus"></i></span
-                      ></a></div
-                  ></small>
-                </div>
-              </div>
-            </div>
+            <!--  -------------------------------------------------------------------------------------------------------------------------- -->
 
-            <div class="container my-5">
-              <div class="row border rounded">
-                <div class="col-sm-4 my-2">
-                  <img
-                    src="../images/karoline-vargdal-vKjkBosYsN0-unsplash.jpg"
-                    class="img-thumbnail"
-                    alt="A river with lots of water flowing through a bridge."
-                  />
-                  <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
-                    ><a
-                      href="#"
-                      class="col-2 text-light col-sm-12 col-md-3 me-1"
-                      >#North</a
-                    ><a
-                      href="#"
-                      class="col-2 col-sm-12 col-md-3 text-light mx-lg-1"
-                      >#Summer</a
-                    ></small
-                  >
-                </div>
-                <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="secondary-font">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Optio voluptates quam ipsam aut ratione, adipisci, tenetur
-                    eveniet repellendus quae, qui asperiores ab atque itaque.
-                    Temporibus consequatur excepturi quis dignissimos
-                    doloremque.
-                  </p>
-                </div>
-                <div
-                  class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
-                >
-                  <small class="row mb-4 p-sm-0 secondary-font"
-                    >Written by:
-                    <div class="col-6">
-                      <a href="#" class="col text-light">Link to user</a>
-                    </div>
-                    <div class="col-2">
-                      <a href="#"
-                        ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow <i class="fa-solid fa-plus"></i></span
-                      ></a></div
-                  ></small>
-                </div>
-              </div>
-            </div>
-            <div class="d-flex justify-content-center mb-5">
+            <div
+              id="to-top-feed-button-container"
+              class="d-flex justify-content-center mb-5"
+            >
               <a
                 href="#header-feed-page"
                 class="btn btn-primary border-secondary secondary-font"
@@ -460,7 +227,6 @@
           </div>
         </div>
       </div>
-      <section id="posts-feed-container" class="container"></section>
     </main>
     <footer class="bg-secondary pt-5 pb-3">
       <div class="social d-flex col justify-content-center mb-5">
