Moved "to top button" to the bottom.

--- a/feed/index.html
+++ b/feed/index.html
@@ -157,6 +157,7 @@
             </div>
 
             <h1 class="primary-font h2 my-5">Find your next hike</h1>
+          
 
             <!--  -------------------------------------------------------------------------------------------------------------------------- -->
 
@@ -164,16 +165,11 @@
 
             <!--  -------------------------------------------------------------------------------------------------------------------------- -->
 
+          </div>
             <div
               id="to-top-feed-button-container"
               class="d-flex justify-content-center mb-5"
             >
-              <a
-                href="#header-feed-page"
-                class="btn btn-primary border-secondary secondary-font"
-                id="btn-to-top"
-                >To top <i class="fa-solid fa-angle-up"></i
-              ></a>
             </div>
           </div>
           <div
