--- a/registration/register.html
+++ b/registration/register.html
@@ -95,7 +95,7 @@
           name="auth"
           id="register-form"
           method="post"
-          class="bg-light text-start secondary-font col-10 col-sm-6 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2"
+          class="form bg-light text-start secondary-font col-10 col-sm-6 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2"
         >
           <h2 class="text-center my-2 pt-5 primary-font">Register user</h2>
           <p class="primary-font mb-5 text-secondary text-center">
