--- a/profile/index.html
+++ b/profile/index.html
@@ -26,7 +26,7 @@
         <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-10">
           <a
             class="navbar-brand text-light d-flex justify-content-center align-items-center"
-            href="/feed/"
+            href="/posts/"
           >
             <img
               src="../images/mdi_foot-print.png"
@@ -60,7 +60,7 @@
                 >
               </li>
               <li class="nav-item d-flex justify-content-end mx-lg-2">
-                <a class="nav-link active text-light" href="/feed/">Feed</a>
+                <a class="nav-link active text-light" href="/posts/">Feed</a>
               </li>
               <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link text-light" href="/profile/">My Profile</a>
