--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script defer type="module" src="./js/index.mjs"></script>
+    <script defer type="module" src="./js/ui/listeners/auth.mjs"></script>
 
     
     <link rel="stylesheet" href="/css/theme.css" />
@@ -91,7 +92,7 @@
                 Search inspiration and post your favourite hikes!
                 </figcaption>
             </figure>
-            <form id="log-in" name="auth" method="post" class="form bg-light text-start secondary-font col-10 col-sm-5 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2">
+            <form id="log-in" name="auth" method="post" class="bg-light text-start secondary-font col-10 col-sm-5 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2">
                 <h2 class="text-center my-2 pt-5 primary-font">Log in</h2>
                 <div class="form-group row my-3 " >
                     <div class="d-flex justify-content-center align-center">
