--- a/profile/index.html
+++ b/profile/index.html
@@ -60,7 +60,7 @@
                 >
               </li>
               <li class="nav-item d-flex justify-content-end mx-lg-2">
-                <a class="nav-link active text-light" href="/feed/">Feed</a>
+                <a class="nav-link active text-light" href="/posts/">Feed</a>
               </li>
               <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a class="nav-link text-light" href="/profile/">My Profile</a>
