post template - not working
Error "Uncaught (in promise) TypeError: postData is undefined"

Properties nested in data property inside postData. How to access it using postTemplate and renderTemplate in a function?

--- a/profile/index.html
+++ b/profile/index.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../css/theme.css" />
+    <script defer type="module" src="../js/index.mjs"></script>
   </head>
   <body>
     <header class="bg-secondary container-fluid" id="header-profile-page">
