to-top-button, restructuring post function route.

--- a/profile/index.html
+++ b/profile/index.html
@@ -20,9 +20,10 @@
     ></script>
     <link rel="stylesheet" href="../css/theme.css" />
     <script defer type="module" src="../js/index.mjs"></script>
+    <script defer type="module" src="../js/routes/profile.mjs"></script>
   </head>
   <body>
-    <header class="bg-secondary container-fluid" id="header-profile-page">
+    <header class="bg-secondary container-fluid" id="header-profile">
       <nav class="navbar navbar-expand-lg col-md-12 col-xxl-11">
         <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-10">
           <a
@@ -217,14 +218,9 @@
           </a>
         </div>
       </section>
-      <div class="d-flex justify-content-center mb-5">
-        <a
-          href="#header-profile-page"
-          class="btn btn-primary border-secondary secondary-font"
-          id="btn-to-top"
-          >To top <i class="fa-solid fa-angle-up"></i
-        ></a>
-      </div>
+      <div
+        class="d-flex justify-content-center mb-5 to-top-button-container"
+      ></div>
     </main>
     <footer class="bg-secondary pt-5 pb-3">
       <div class="social d-flex col justify-content-center mb-5">
