Made login route, and moved setAuthListener function

--- a/registration/register.html
+++ b/registration/register.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/css/theme.css" />
 
     <script defer type="module" src="../js/index.mjs"></script>
+    <script defer type="module" src="../js/routes/login.mjs"></script>
   </head>
   <body>
     <header class="bg-secondary container-fluid">
