--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script defer type="module" src="./js/index.mjs"></script>
+    <script defer type="module" src="../js/routes/login.mjs"></script>
     
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
