--- a/profile/index.html
+++ b/profile/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="../css/theme.css" />
     <script defer type="module" src="../js/index.mjs"></script>
     <script defer type="module" src="../js/routes/profile.mjs"></script>
+    <script defer type="module" src="../js/routes/logout.mjs"></script>
   </head>
   <body>
     <header class="bg-secondary container-fluid" id="header-profile">
@@ -55,9 +56,10 @@
             <ul class="navbar-nav">
               <li class="nav-item d-flex justify-content-end mx-lg-2">
                 <a
+                  id="logout-button"
                   class="nav-link text-light"
                   aria-current="page"
-                  href="../index.html"
+                  href="#"
                   >Log Out</a
                 >
               </li>
