--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer type="module" src="./js/index.mjs"></script>
     <script defer type="module" src="../js/routes/login.mjs"></script>
     
-    <link rel="stylesheet" href="/css/theme.css" />
+    <link rel="stylesheet" href="dist/css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -68,7 +68,7 @@
                 <a class="nav-link disabled text-primary" href="#">Feed</a>
               </li>
               <li class="nav-item d-flex justify-content-end mx-lg-2">
-                <a class="nav-link disabled text-primary" href="#"
+                <a  class="nav-link disabled text-primary" href="#"
                   >My Profile</a
                 >
               </li>
