--- a/registration/register.html
+++ b/registration/register.html
@@ -23,7 +23,7 @@
     <script defer type="module" src="../js/routes/login.mjs"></script>
   </head>
   <body>
-    <header class="bg-secondary container-fluid">
+    <header class="container-fluid">
       <nav class="navbar navbar-expand-lg col-md-12 col-xxl-11">
         <div class="container-fluid col-md-9 col-lg-12 col-xl-11 col-xxl-9">
           <a
@@ -35,136 +35,105 @@
               class="d-inline-block align-center"
               alt="Footprint logo linking to home page"
             />
-            <h1 class="primary-font uppercase">Hikes Inspire</h1></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNavDropdown"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item d-flex justify-content-end mx-lg-2">
-                <a
-                  class="nav-link active text-light"
-                  aria-current="page"
-                  href="#inputEmail"
-                  >Log In</a
-                >
-              </li>
-              <li class="nav-item d-flex justify-content-end mx-lg-2">
-                <a class="nav-link disabled text-primary" href="#">Feed</a>
-              </li>
-              <li class="nav-item d-flex justify-content-end mx-lg-2">
-                <a class="nav-link disabled text-primary" href="#"
-                  >My Profile</a
-                >
-              </li>
-            </ul>
-          </div>
+            <h1 class="primary-font uppercase">Hikes Inspire</h1>
+          </a>
         </div>
       </nav>
     </header>
     <main class="d-flex justify-content-center">
       <section
-        class="container-lg my-5 d-flex row justify-content-center align-items-start"
+        class="container my-5 d-flex flex-column flex-sm-row justify-content-center justify-content-lg-start align-items-center"
       >
-        <figure
-          class="d-none d-md-inline-block justify-content-md-center row text-dark bg-light border pb-4 col-10 col-sm-5 col-lg-5 col-xl-4 me-sm-2"
-        >
-          <img
-            src="../images/collage-hiking-images-with-border.jpeg"
-            class="figure-img img-fluid rounded"
-            alt="A collage of nature images."
-          />
-          <figcaption
-            class="figcaption-font image-text h4 text-center pt-sm-1 m-1 mx-lg-3 lh-base"
-          >
-            Search inspiration and post your favourite hikes!
-          </figcaption>
-        </figure>
+        <img
+          src="../images/collage-hiking-images-with-border.jpeg"
+          class="figure-img img-fluid rounded col-10 col-sm-7 col-md-5 col-lg-4"
+          alt="A collage of nature images."
+        />
         <form
           name="auth"
           id="register-form"
           method="post"
-          class="bg-light text-start secondary-font col-10 col-sm-6 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2"
+          class="text-light secondary-font col-10 col-sm-6 col-md-5 col-lg-4 col-xl-3 ms-lg-5 ms-sm-2 needs-validation"
+          novalidate
         >
-          <h2 class="text-center my-2 pt-5 primary-font">Register user</h2>
-          <p class="primary-font mb-5 text-secondary text-center">
+          <h2 class="text-center mt-2 mt-sm-0 pt-sm-0 primary-font">
+            Register user
+          </h2>
+          <p class="primary-font text-secondary text-center">
             and join the community
           </p>
-          <div class="form-group row my-3">
-            <div class="d-flex justify-content-center align-center">
-              <label for="username" class="col-form-label"
-                >Username
-                <input
-                  type="text"
-                  name="name"
-                  required
-                  pattern="^[\w]+$"
-                  maxlength="20"
-                  class="form-control bg-light mb-2"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title="Please enter your first name"
-                  id="input-user-name"
-                />
-              </label>
-            </div>
-            <div class="d-flex justify-content-center align-center">
-              <label for="registration-email" class="col-form-label"
-                >Email
-                <input
-                  type="email"
-                  name="email"
-                  required
-                  pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
-                  class="form-control bg-light mb-2"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title="A valid e-mail address must contain a @."
-                  id="registration-email"
-                />
-              </label>
-            </div>
-
-            <div class="d-flex justify-content-center align-center">
-              <label for="registration-password" class="col-form-label"
-                >Your Password
-                <input
-                  type="password"
-                  name="password"
-                  minlength="8"
-                  required
-                  class="form-control bg-light"
-                  data-toggle="tooltip"
-                  data-placement="top"
-                  title="Your chosen password must be at least 8 characters long."
-                  id="registration-password"
-                />
-              </label>
-            </div>
-
-            <div class="form-group row p-5 d-flex text-center">
-              <div class="d-flex justify-content-center align-items-center">
-                <button
-                  type="submit"
-                  value=""
-                  class="btn btn-warning py-2 px-5"
-                  id="registration-button"
-                >
-                  Register
-                </button>
+          <div class="form-group row d-flex justify-content-center">
+            <div
+              class="d-flex flex-column justify-content-center align-center col-10"
+            >
+              <label for="username" class="col-form-label">Username</label>
+              <input
+                type="text"
+                name="name"
+                required
+                pattern="^[\w]+$"
+                maxlength="20"
+                minlength="3"
+                class="form-control text-light"
+                title="Please enter your first name"
+                id="input-user-name"
+              />
+              <div class="invalid-feedback">
+                Please enter a name between 3 and 20 characters.
               </div>
+            </div>
+            <div
+              class="d-flex flex-column justify-content-center align-center col-10"
+            >
+              <label for="login-email" class="col-form-label">Email</label>
+              <input
+                type="email"
+                name="email"
+                pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
+                required
+                class="form-control bg-primary text-light"
+                id="login-email"
+              />
+              <div class="invalid-feedback">
+                Please enter an email with user@noroff.no or user@stud.noroff.no
+                pattern.
+              </div>
+            </div>
+
+            <div
+              class="d-flex flex-column justify-content-center align-center col-10"
+            >
+              <label for="login-password" class="col-form-label"
+                >Password</label
+              >
+              <input
+                type="password"
+                name="password"
+                minlength="8"
+                required
+                class="form-control bg-primary text-light"
+                title="Your password must be at least 8 characters long."
+                id="login-password"
+              />
+              <div class="invalid-feedback">
+                Please enter a password with more than 8 characters.
+              </div>
+            </div>
+            <div
+              class="d-flex flex-column justify-content-center align-items-center mt-4 mt-xl-5"
+            >
+              <button
+                id="registration-button"
+                type="submit"
+                class="btn btn-light fw-semibold col-10 px-5"
+              >
+                Register
+              </button>
+              <a
+                href="../index.html"
+                class="btn btn-outline-light fw-semibold mt-3 py-2 col-10"
+                >Log in</a
+              >
             </div>
           </div>
         </form>
@@ -173,12 +142,15 @@
     <footer class="bg-secondary pt-5 pb-3">
       <div class="social d-flex col justify-content-center mb-5">
         <a href="https://www.instagram.com/"
-          ><i class="fa-brands fa-instagram fa-lg mx-2"></i></a
-        ><a href="https://www.snapchat.com/"
-          ><i class="fa-brands fa-snapchat fa-lg mx-2"></i></a
-        ><a href="https://twitter.com/"
-          ><i class="fa-brands fa-x-twitter mx-2"></i></a
-        ><a href="https://www.facebook.com/"
+          ><i class="fa-brands fa-instagram fa-lg mx-2"></i
+        ></a>
+        <a href="https://www.snapchat.com/"
+          ><i class="fa-brands fa-snapchat fa-lg mx-2"></i
+        ></a>
+        <a href="https://twitter.com/"
+          ><i class="fa-brands fa-x-twitter mx-2"></i
+        ></a>
+        <a href="https://www.facebook.com/"
           ><i class="fa-brands fa-facebook mx-2"></i
         ></a>
       </div>
